--- a/app/Labs/Lab2/index.css
+++ b/app/Labs/Lab2/index.css
@@ -174,6 +174,19 @@
       .wd-width-75px {
         width: 75px;
       }
+      #wd-screen-size-label {
+         position: fixed;
+         bottom: 0;
+         right: 0;
+         background-color: black;
+         color: white;
+         padding: 5px;
+         font-size: 12px;
+         z-index: 1000;
+         width: 220px;
+         text-align: center;
+       }
+       
      
 
      
